# python-sonarqube-api

./: .gitignore  AGENTS.md  FEATURES.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yaml  release.yaml
documentation/: alm_integrations.md  alm_settings.md  analysis_cache.md  analysis_v2.md  applications.md  audit_logs.md  authentication.md  authorizations_v2.md  ce.md  clean_code_policy_v2.md  components.md  dop_translation_v2.md  duplications.md  editions.md  favorites.md  fix_suggestions_v2.md  hotspots.md  index.md  issues.md  languages.md  measures.md  metrics.md  monitoring.md  new_code_periods.md  notifications.md  permissions.md  permissions_v2.md  plugins.md  project_analyses.md  project_badges.md  project_branches.md  project_dump.md  project_links.md  project_pull_requests.md  project_tags.md  projects.md  quality_gates.md  qualityprofiles.md  rules.md  rules_v2.md  (+13 more)
examples/: 01_authentication.py  02_projects.py  03_issues.py  04_measures.py  05_users.py  06_quality_gates.py  07_rules.py  08_quality_profiles.py  09_hotspots.py
src/: sonarqube.py
src/sonarqube/: __init__.py  alm_integrations.py  alm_settings.py  analysis_cache.py  analysis_v2.py  applications.py  audit_logs.py  authentication.py  authorizations_v2.py  ce.py  clean_code_policy_v2.py  client.py  components.py  dop_translation_v2.py  duplications.py  editions.py  favorites.py  fix_suggestions_v2.py  hotspots.py  issues.py  languages.py  measures.py  metrics.py  monitoring.py  new_code_periods.py  notifications.py  permissions.py  plugins.py  project_analyses.py  project_badges.py  project_branches.py  project_dump.py  project_links.py  project_pull_requests.py  project_tags.py  projects.py  quality_gates.py  quality_profiles.py  rules.py  sca_v2.py  (+11 more)
tests/: conftest.py  test_alm_integrations.py  test_alm_settings.py  test_analysis_cache.py  test_analysis_v2.py  test_applications.py  test_audit_logs.py  test_authentication.py  test_authorizations_v2.py  test_ce.py  test_clean_code_policy_v2.py  test_components.py  test_dop_translation_v2.py  test_duplications.py  test_editions.py  test_favorites.py  test_fix_suggestions_v2.py  test_formatting.py  test_hotspots.py  test_issues.py  test_languages.py  test_measures.py  test_metrics.py  test_monitoring.py  test_new_code_periods.py  test_notifications.py  test_permissions.py  test_plugins.py  test_project_analyses.py  test_project_badges.py  test_project_branches.py  test_project_dump.py  test_project_links.py  test_project_pull_requests.py  test_project_tags.py  test_projects.py  test_quality_gates.py  test_quality_profiles.py  test_rules.py  test_sca_v2.py  (+11 more)
tests/integration/: conftest.py  test_api.py  test_authentication_methods.py  test_data_related.py  (+13 more)
